<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.fragment.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_userInputText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwdInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_pwdInputText"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_logIn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/divOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_background_line">

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/str_txtOr"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/str_txtOr"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_logIn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_3C4758"
        android:text="@string/str_logIn_Facebook"
        app:icon="@drawable/ic_facebook"
        app:iconGravity="start" />

    <Button
        android:id="@+id/btn_logIn_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_8491A6"
        android:text="@string/str_logIn_Twitter"
        app:icon="@drawable/ic_twitter"
        app:iconPadding="8dp" />

    <Button
        android:id="@+id/btn_logIn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_C0CCDA"
        android:text="@string/str_logIn_Google"
        app:icon="@drawable/ic_google" />

</LinearLayout>